<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente">

    <TextView
        android:id="@+id/FrasePrincipale"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/Titolo"
        android:textSize="40dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/umano"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/border_button"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="30dp"
        android:text="@string/PlayervsPlayer" />

    <Button
        android:id="@+id/computer"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/border_button"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="30dp"
        android:text="@string/PlayervsComputer" />

    <Button
        android:id="@+id/Statistiche"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/border_button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="500dp"
        android:text="@string/vittorie" />

    <Button
        android:id="@+id/Informazioni"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/border_button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="550dp"
        android:text="@string/Informazioni" />

    <ImageView
        android:id="@+id/FotoX"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="160dp"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/FotoO"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="160dp"
        app:srcCompat="@drawable/o" />

    <RadioGroup
        android:id="@+id/gruppo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="340dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/BottoneO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="85dp"
            android:text="@string/player_x" />

        <RadioButton
            android:id="@+id/BottoneX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_o" />


    </RadioGroup>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>