<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente">
    <Button
        android:id="@+id/GiocaAncoraX"
        android:layout_width="165dp"
        android:layout_height="50sp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/border_button"
        android:text="@string/rigioca"
        android:visibility="visible" />

    <Button
        android:id="@+id/backX"
        android:layout_width="165dp"
        android:layout_height="50sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="620dp"
        android:background="@drawable/border_button"
        android:text="@string/indietro"
        android:visibility="visible" />
    <TextView
        android:id="@+id/AreaVittoriaX"
        android:layout_width="200dp"
        android:layout_height="42sp"
        android:layout_marginTop="50dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/FotoCroce"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/AreaScreenX"
        android:layout_width="fill_parent"
        android:layout_height="480dp"
        android:layout_marginTop="130dp" />
</android.support.design.widget.CoordinatorLayout>